# dataframe

./: .gitignore  CHANGELOG.md  README.md  cabal.project  dataframe.cabal  dataframe.ghci  flake.nix
.github/workflows/: ci.yml  haskell-ci.yml
app/: LazyBenchmark.hs  Synthesis.hs
benchmark/: Main.hs
cbits/: arrow_abi.h  dataframe_arrow.h  rts_init.c
dataframe-fastcsv/: dataframe-fastcsv.cabal
dataframe-fastcsv/src/DataFrame/IO/CSV/: Fast.hs
dataframe-fastcsv/tests/: Main.hs
dataframe-fastcsv/tests/Operations/: ReadCsv.hs
dataframe-fastcsv/tests/data/unstable_csv/: crlf.csv  crlf.tsv  extra_fields.csv  missing_fields.csv  no_trailing_newline.csv  whitespace_fields.csv
dataframe-hasktorch/: dataframe-hasktorch.cabal
dataframe-persistent/: dataframe-persistent.cabal
dataframe-persistent/src/DataFrame/IO/: Persistent.hs
dataframe-persistent/src/DataFrame/IO/Persistent/: TH.hs
dataframe-persistent/tests/: PersistentTests.hs
docs/: coming_from_other_implementations.md  cookbook.md  dataframes_in_haskell.md  exploratory_data_analysis_primer.md  haskell_for_data_analysis.md  intro_to_probability_and_data.md  quick_start.md  tutorial.md  using_dataframe_in_a_standalone_script.md  working_with_nulls.md
docs/base/: haskell_for_data_analysis.md
docs/base_scripts/: base_exploratory_data_analysis_primer.md
examples/: CaliforniaHousing.hs  Chipotle.hs  Iris.lhs  Main.hs  OneBillionRowChallenge.hs  examples.cabal  run_1brc.sh
ffi/DataFrame/: FFI.hs  IR.hs
ffi/DataFrame/IO/: Arrow.hs
python/: example.py
python/hyrax/: __init__.py
scripts/: lint.sh  presubmit.sh
src/: DataFrame.hs
src/DataFrame/: DecisionTree.hs  Errors.hs  Functions.hs  Monad.hs  Operators.hs  Synthesis.hs  Typed.hs
src/DataFrame/Display/Terminal/: Plot.hs
src/DataFrame/Display/Web/: Plot.hs
src/DataFrame/IO/: CSV.hs  Parquet.hs
src/DataFrame/IO/Parquet/: Binary.hs  Dictionary.hs  Encoding.hs  Levels.hs  Page.hs  Seeking.hs  Thrift.hs  Time.hs  Types.hs
src/DataFrame/IO/Unstable/: CSV.hs
src/DataFrame/Internal/: Binary.hs  Column.hs  DataFrame.hs  Expression.hs  Interpreter.hs  Nullable.hs  Parsing.hs  Row.hs  Types.hs
src/DataFrame/Lazy/IO/: Binary.hs  CSV.hs
src/DataFrame/Lazy/Internal/: DataFrame.hs  Executor.hs  Optimizer.hs
src/DataFrame/Operations/: Aggregation.hs  Core.hs  Join.hs  Merge.hs  Permutation.hs  Statistics.hs  Subset.hs  Transformations.hs  Typing.hs
src/DataFrame/Typed/: Access.hs  Aggregate.hs  Expr.hs  Freeze.hs  Join.hs  Lazy.hs  Operations.hs  Schema.hs  TH.hs  Types.hs
tests/: DecisionTree.hs  GenDataFrame.hs  LazyParquet.hs  Main.hs  Monad.hs  Parquet.hs  ParquetTestData.hs  Properties.hs
tests/IO/: CSV.hs  JSON.hs
tests/Internal/: Parsing.hs
tests/Operations/: Aggregations.hs  Apply.hs  Derive.hs  GroupBy.hs  InsertColumn.hs  Join.hs  Nullable.hs  Provenance.hs  ReadCsv.hs  Shuffle.hs  Sort.hs  Statistics.hs  Subset.hs  Typing.hs  WriteCsv.hs
tests/data/typing/: texts.txt  texts_with_empties.txt  texts_with_empties_and_nullish.txt
