cabal-version:      2.4
name:               examples
version:            0.0.0.1

synopsis: Examples for dataframe library.

description: Examples for dataframe library.

bug-reports: https://github.com/mchav/dataframe/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Michael Chavinda
maintainer:         mschavinda@gmail.com

copyright: (c) 2024-2024 Michael Chavinda
category: Data
tested-with: GHC ==9.8.3 || ==9.6.6 || ==9.10.1
extra-doc-files: CHANGELOG.md README.md

source-repository head
  type:     git
  location: https://github.com/mchav/dataframe

executable examples
    main-is:       Main.hs
    ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N
    default-extensions: Strict
    other-modules: Chipotle,
                   CaliforniaHousing,
                   OneBillionRowChallenge,
                   Iris,
                   DataFrame,
                   DataFrame.Lazy,
                   DataFrame.Functions,
                   DataFrame.Synthesis,
                   DataFrame.Display.Web.Plot,
                   DataFrame.Internal.Types,
                   DataFrame.Internal.Expression,
                   DataFrame.Internal.Interpreter,
                   DataFrame.Internal.Parsing,
                   DataFrame.Internal.Column,
                   DataFrame.Internal.Statistics,
                   DataFrame.Display.Terminal.PrettyPrint,
                   DataFrame.Display.Terminal.Colours,
                   DataFrame.Internal.DataFrame,
                   DataFrame.Internal.Row,
                   DataFrame.Internal.Schema,
                   DataFrame.Errors,
                   DataFrame.Operations.Core,
                   DataFrame.Operations.Join,
                   DataFrame.Operations.Merge,
                   DataFrame.Operations.Permutation,
                   DataFrame.Operations.Subset,
                   DataFrame.Operations.Statistics,
                   DataFrame.Operations.Transformations,
                   DataFrame.Operations.Typing,
                   DataFrame.Operations.Aggregation,
                   DataFrame.Display,
                   DataFrame.Display.Terminal.Plot,
                   DataFrame.IO.CSV,
                   DataFrame.IO.JSON,
                   DataFrame.IO.Unstable.CSV,
                   DataFrame.IO.Parquet,
                   DataFrame.IO.Parquet.Binary,
                   DataFrame.IO.Parquet.Dictionary,
                   DataFrame.IO.Parquet.Levels,
                   DataFrame.IO.Parquet.Thrift,
                   DataFrame.IO.Parquet.ColumnStatistics,
                   DataFrame.IO.Parquet.Compression,
                   DataFrame.IO.Parquet.Encoding,
                   DataFrame.IO.Parquet.Page,
                   DataFrame.IO.Parquet.Time,
                   DataFrame.IO.Parquet.Types,
                   DataFrame.Lazy.IO.CSV,
                   DataFrame.Lazy.IO.Binary,
                   DataFrame.Lazy.Internal.DataFrame,
                   DataFrame.Lazy.Internal.LogicalPlan,
                   DataFrame.Lazy.Internal.PhysicalPlan,
                   DataFrame.Lazy.Internal.Optimizer,
                   DataFrame.Lazy.Internal.Executor,
                   DataFrame.Monad,
                   DataFrame.Hasktorch,
                   DataFrame.IO.Parquet.Seeking,
                   DataFrame.Internal.Binary,
                   DataFrame.Internal.Nullable,
                   DataFrame.Operators,
                   DataFrame.DecisionTree,
                   DataFrame.Typed.Types,
                   DataFrame.Typed.Schema,
                   DataFrame.Typed.Freeze,
                   DataFrame.Typed.Access,
                   DataFrame.Typed.Operations,
                   DataFrame.Typed.Join,
                   DataFrame.Typed.Aggregate,
                   DataFrame.Typed.TH,
                   DataFrame.Typed.Expr,
                   DataFrame.Typed
    hs-source-dirs:   .,
                      ../src,
                      ../dataframe-hasktorch/src
    build-depends:    base >= 4 && <5,
                      binary >= 0.8 && < 1,
                      aeson >= 0.11.0.0 && < 3,
                      array >= 0.5.4.0 && < 0.6,
                      attoparsec >= 0.12 && < 0.15,
                      bytestring >= 0.11 && < 0.13,
                      bytestring-lexing >= 0.5 && < 0.6,
                      cassava >= 0.1 && < 1,
                      containers >= 0.6.7 && < 0.9,
                      deepseq >= 1 && < 2,
                      directory >= 1.3.0.0 && < 2,
                      granite ^>= 0.4,
                      hashable >= 1.2 && < 2,
                      hasktorch,
                      http-conduit,
                      process ^>= 1.6,
                      snappy-hs ^>= 0.1,
                      random >= 1.2 && < 2,
                      regex-tdfa >= 1.3.0 && < 2,
                      scientific >=0.3.1 && <0.4,
                      streamly-bytestring,
                      streamly-core,
                      template-haskell >= 2.0 && < 3,
                      text >= 2.0 && < 3,
                      these >= 1.1 && < 2,
                      time >= 1.12 && < 2,
                      unordered-containers >= 0.1 && < 1,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zlib >= 0.5 && < 1,
                      zstd >= 0.1.2.0 && < 0.2,
                      mmap >= 0.5.8 && < 0.6,
                      parallel >= 3.2.2.0 && < 5,
                      stm >= 2.5 && < 3,
                      filepath >= 1.4 && < 2,
                      Glob >= 0.10 && < 1,
    if impl(ghc >= 9.12)
      build-depends: ghc-typelits-natnormalise == 0.9.3
    else
      build-depends: ghc-typelits-natnormalise >= 0.7.7 && < 0.9
    c-sources:        ../cbits/process_csv.c
    include-dirs:     ../cbits
    includes:         process_csv.h
    install-includes: process_csv.h
    default-language: Haskell2010
